--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@quasar/extras": "^1.16.4",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "laravel-echo": "^1.16.1",
+    "pusher-js": "^8.4.0-rc2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
