--- a/package.json
+++ b/package.json
@@ -12,26 +12,33 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.2.1",
+    "laravel-echo": "^1.16.1",
+    "pinia": "^2.0.11",
+    "pusher-js": "^8.4.0-rc2",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12",
-    "laravel-echo": "^1.16.1",
-    "pusher-js": "^8.4.0-rc2"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^1.9.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "vite-plugin-checker": "^0.7.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@quasar/app-vite": "^1.9.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "eslint-plugin-vue": "^9.0.0",
+    "postcss": "^8.4.14",
+    "vite-plugin-checker": "^0.7.1",
+    "workbox-build": "^7.1.1",
+    "workbox-cacheable-response": "^7.1.0",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
